# CANN

./: .gitignore  CMakeLists.txt  README.md  __init__.py  bindings.cpp  pyproject.toml
cann_alpha/: ActivationFunc.h  Activations.cpp  ConvolutionLayer.cpp  ConvolutionLayer.h  InputLayer.cpp  Layer.cpp  Layer.h  LossFunc.h  Losses.cpp  Network.cpp  Network.h  NeuralLayer.cpp  NeuralLayer.h  Optimizer.cpp  Optimizer.h  Optimizers.cpp  OutputLayer.cpp  OutputLayer.h  __init__.py  tensor.cuh
cann_alpha/cata/: ops.cuh  tensor.cu  tensor.cuh
cann_alpha/cata/ops/: activation_ops.cu  convolution_ops.cu  loss_ops.cu  matrix_ops.cu  memory_ops.cu  optimizers.cu  vector_ops.cu  weights_init.cu
cann_alpha/cata/tensor/: tensor.cu
cann_alpha/functions/: ActivationFunc.h  Activations.cpp  LossFunc.h  Losses.cpp
cann_alpha/layers/: ConvolutionLayer.cpp  ConvolutionLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  NeuralLayer.cpp  NeuralLayer.h  OutputLayer.cpp  OutputLayer.h
cann_alpha/optimizers/: Optimizer.cpp  Optimizer.h  Optimizers.cpp
