[project]
name = "cann_alpha"                # PyPI distribution name
version = "0.3.3"
description = "A lightweight Python library for training neural networks with GPU acceleration. Built on C++ and CUDA for maximum performance."
requires-python = ">=3.8"
authors = [{ name = "Yuval Rubin" }]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["scikit-build-core>=0.8", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build-core]
cmake.minimum-version = "3.22"
build-type = "Release"

[tool.scikit-build]
# The package folder to include in the wheel
wheel.packages = ["cann_alpha"]
